fix(security): externalize secrets and sensitive backend configuration